// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapChildren should append new child 1`] = `
Array [
  Object {
    "key": 0,
    "willMount": true,
  },
  Object {
    "key": 1,
  },
  Object {
    "key": 2,
    "willUnmount": true,
  },
  Object {
    "key": 4,
    "willMount": true,
  },
  Object {
    "key": 6,
    "willMount": true,
  },
  Object {
    "key": 3,
  },
  Object {
    "key": 5,
    "willMount": true,
  },
]
`;

exports[`mapChildren should append new children 1`] = `
Array [
  Object {
    "key": 0,
    "willMount": true,
  },
  Object {
    "key": 1,
  },
  Object {
    "key": 2,
    "willUnmount": true,
  },
  Object {
    "key": 4,
    "willMount": true,
  },
  Object {
    "key": 6,
    "willMount": true,
  },
  Object {
    "key": 3,
  },
  Object {
    "key": 5,
    "willMount": true,
  },
]
`;

exports[`mapChildren should mark child is about to be unMount 1`] = `
Array [
  Object {
    "key": 1,
  },
  Object {
    "key": 2,
    "willUnmount": true,
  },
]
`;

exports[`mapChildren should work correctly when noting changed 1`] = `
Array [
  Object {
    "key": 1,
  },
]
`;

exports[`mapChildren should work fine by adding new child when children were empty 1`] = `
Array [
  Object {
    "key": 1,
    "willMount": true,
  },
]
`;

exports[`mapChildren should work fine when all deleted 1`] = `
Array [
  Object {
    "key": 1,
    "willUnmount": true,
  },
]
`;

exports[`mapChildren should work fine with both empty 1`] = `Array []`;

exports[`mapChildren should work fine with object 1`] = `
Array [
  Object {
    "key": 0,
    "willMount": true,
  },
  Object {
    "key": 1,
    "willUnmount": true,
  },
]
`;
